--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       <p class="copyright-text">Powered by  @TheMaskedRider1.5 🚴‍♀️‍‍</p>
       <!-- hitwebcounter Code START -->
       <a href="https://www.hitwebcounter.com" target="_blank">
-      <img src="https://hitwebcounter.com/counter/counter.php?page=7965738&style=0008&nbdigits=7&type=ip&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>
+      <img src="https://hitwebcounter.com/counter/counter.php?page=7992034&style=0008&nbdigits=6&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>                        
   </div>
   </footer>
 
