--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <br>
           <p>👉 Open-concept commercial space that is perfect for coffee shop or convenience store</p>
           <p>👉 Rooftop is expandable to patio dining</p>
-          <p>👉 Ideal for short term or long term rental with rasonable rental price (call for details)</p>
+          <p>👉 Ideal for short term or long term rental with reasonable rental price</p>
         </div>
 
         <div class="features2-row">
@@ -278,7 +278,7 @@
       <p class="copyright-text">Powered by  @TheMaskedRider1.5 🚴‍♀️‍‍</p>
       <!-- hitwebcounter Code START -->
       <a href="https://www.hitwebcounter.com" target="_blank">
-      <img src="https://hitwebcounter.com/counter/counter.php?page=7992034&style=0008&nbdigits=6&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>                        
+      <img src="https://hitwebcounter.com/counter/counter.php?page=7992034&style=0008&nbdigits=6&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>
   </div>
   </footer>
 
